style.css
body {
    font-family: "Exo 2";
    color: black;
    background: url("images/grothamagoog.jpg")
}
p {
    color: black;
}
h1 {
    color: black;
    text-align: center;
    text-decoration: underline;
}

a {
    text-align: center;
}
iframe {
    display: block;
}
.banner {
    background-color: forestgreen;
    border-width: 2px;
    border-style: dotted;
    border-color: black;
    width: 80%;
    padding: 16px;
    margin-left: 64px;
}
.banner2 {
    background-color: rgb(57, 201, 57);
    border-width: 2px;
    border-style: dotted;
    border-color: black;
    width: 80%;
    padding: 16px;
    margin-left: 64px;
    font-size: x-large 
}
.form {
    border-width: 2px;
    border-style: dotted;
    border-color: black;
}
.centered {

    margin-left: auto;
    margin-right: auto;
}

a {
  color: #000000;
  font-weight: bold;
}
.navbar{
    text-align: center;
    width: 100%;
    height: auto;
    font-size: large;
}
.navbutton{
    background-color: forestgreen;
    border: dashed #444;
    padding: 5px;
    height: 50px;
    vertical-align: middle;
}
/* mobile */
navbutton{
    width: 100%;
    margin: 100%;
    
}
/* tablet */
@media (min-width:830px){
    .navbutton{
        display: inline-block;
        width: 25%;
        margin: -4px;
        
    }
}
/* large desktop */
@media (min-width:1200pxpx){
    .navbutton{
        display: inline-block;
        width: 150px;
        margin: 10px;
        
    }
}

